--- a/TeamBuddy.App/MainWindow.xaml
+++ b/TeamBuddy.App/MainWindow.xaml
@@ -1,12 +1,75 @@
-﻿<Window x:Class="TeamBuddy.App.MainWindow"
+﻿<Window x:Class="TeamBuddyUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TeamBuddy.App"
+        xmlns:local="clr-namespace:TeamBuddyUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Welcome to TeamBuddy" Height="600" Width="800" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="TeamBuddyIcon.ico">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="65"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="10"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="1.5*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Orientation="Horizontal" HorizontalAlignment="Center">
+            <TextBlock Text="Team Buddy" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Humaira Demo" FontSize="110" Foreground="#FF707070"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch1" Content="Log in" Opacity="0.6" Background="#FF999999" Click="ButtonLogIn_Click">
+            </Button>
+                
+            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch2" Content="Sign up" Opacity="0.6" Click="ButtonSignUp_Click"/>
+        </StackPanel>
+
+        <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Login:" Margin="0,0,20,0" 
+                   Cursor="None" TextDecorations="{x:Null}" FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
+        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Password:" Margin="0,0,20,0" 
+                   FontSize="20" Foreground="#FFD4D4D4" FontFamily="Ink Free" FontWeight="Bold"/>
+
+        <TextBox Name="TextBoxLogin" Grid.Row="3" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GotKeyboardFocus="TextBoxLogin_OnGotKeyboardFocus" FontStyle="Italic" Opacity="0.6">
+            <TextBox.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </TextBox.Resources>
+        </TextBox>
+
+        <TextBox Name="TextBoxPassword" Grid.Row="4" Grid.Column="2" Text="●●●●●●●●●●●●" Height="30" Margin="0,0,0,0" 
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GotKeyboardFocus="TextBoxPassword_OnGotKeyboardFocus" TextDecorations="{x:Null}" Opacity="0.6">
+            <TextBox.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </TextBox.Resources>
+        </TextBox>
+
+        <StackPanel Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Background="Transparent" BorderBrush="Transparent" >
+                <Image Source="TeamBuddy_logo.png"/>
+            </Button>
+        </StackPanel>
+
         
+
+        <Grid.Background>
+            <ImageBrush ImageSource="TeamBuddyBG.png" Stretch="UniformToFill"/>
+        </Grid.Background>
+
     </Grid>
 </Window>
