--- a/TeamBuddy.App/Views/CreateNewUserView.xaml
+++ b/TeamBuddy.App/Views/CreateNewUserView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="TeamBuddyUI.SignInWindow"
+﻿<Window x:Class="TeamBuddy.App.Views.CreateNewUserView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TeamBuddyUI"
         mc:Ignorable="d"
-        Title="Sign up" Height="600" Width="800" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="TeamBuddyIcon.ico">
+        Title="Create new user" Height="600" Width="800" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="../TeamBuddyIcon.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -30,10 +30,9 @@
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            <!--<Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch1" Content="Log in" Opacity="0.6" Background="#FFDDDDDD" Click="ButtonLogIn_Click">
-            </Button>-->
+            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ReturnToApplicationButton" Content="Return to application" Opacity="0.6" Background="#FFDDDDDD" />
 
-            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch2" Content="Sign up" Opacity="0.6" Background="#FFDDDDDD" Click="ButtonSignUp_Click"/>
+            <Button Width="120" Height="30" Margin="0,0,0,0" Name="CreateNewUserButton" Content="Create new user" Opacity="0.6" Background="#FFDDDDDD" />
         </StackPanel>
 
         <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Login:" Margin="0,0,20,0" 
