--- a/TeamBuddy.App/Views/LogInView.xaml
+++ b/TeamBuddy.App/Views/LogInView.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="TeamBuddyUI.MainWindow"
+﻿<Window x:Class="TeamBuddy.App.View.LogInView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TeamBuddyUI"
         mc:Ignorable="d"
-        Title="Welcome to TeamBuddy" Height="600" Width="800" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="TeamBuddyIcon.ico">
+        Title="Welcome to TeamBuddy" Height="600" Width="800" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="../TeamBuddyIcon.ico">
+
     <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="65"/>
@@ -30,9 +31,9 @@
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch1" Content="Log in" Opacity="0.6" Background="#FFDDDDDD" Click="ButtonLogIn_Click">
+            <Button Width="120" Height="30" Margin="0,0,0,0" Name="LogInButton" Content="Log in" Opacity="0.6" Background="#FFDDDDDD" >
             </Button>
-                
+
             <!--<Button Width="120"  Height="30" Margin="0,0,0,0" Name="ButtonSwitch2" Content="Sign up" Opacity="0.6" Click="ButtonSignUp_Click"/>-->
         </StackPanel>
 
@@ -42,8 +43,10 @@
                    FontSize="20" Foreground="#FFD4D4D4" FontFamily="Ink Free" FontWeight="Bold"/>
 
         <TextBox Name="TextBoxLogin" Grid.Row="3" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GotKeyboardFocus="TextBoxLogin_OnGotKeyboardFocus" FontStyle="Italic" Opacity="0.6">
-            <TextBox.Resources>
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontStyle="Italic" Opacity="0.6">
+            <!--GotKeyboardFocus="TextBoxLogin_OnGotKeyboardFocus"-->
+
+<TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
                 </Style>
@@ -51,7 +54,8 @@
         </TextBox>
 
         <TextBox Name="TextBoxPassword" Grid.Row="4" Grid.Column="2" Text="●●●●●●●●●●●●" Height="30" Margin="0,0,0,0" 
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GotKeyboardFocus="TextBoxPassword_OnGotKeyboardFocus" TextDecorations="{x:Null}" Opacity="0.6">
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  TextDecorations="{x:Null}" Opacity="0.6">
+            <!--GotKeyboardFocus="TextBoxPassword_OnGotKeyboardFocus"-->
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="15"/>
@@ -61,14 +65,13 @@
 
         <StackPanel Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Background="Transparent" BorderBrush="Transparent" >
-                <Image Source="TeamBuddy_logo.png"/>
+                <Image Source="../TeamBuddy_logo.png"/>
             </Button>
         </StackPanel>
 
-        
 
         <Grid.Background>
-            <ImageBrush ImageSource="TeamBuddyBG.png" Stretch="UniformToFill"/>
+            <ImageBrush ImageSource="../TeamBuddyBG.png" Stretch="UniformToFill"/>
         </Grid.Background>
 
     </Grid>
