--- a/TeamBuddy.App/Views/LogInWindow.xaml
+++ b/TeamBuddy.App/Views/LogInWindow.xaml
@@ -26,7 +26,7 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Orientation="Horizontal" HorizontalAlignment="Center">
-            <TextBlock Text="Team Buddy" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Humaira Demo" FontSize="110" Foreground="#FF707070"/>
+            <Image Source="Images/TBTitle2.png"/>
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
