--- a/TeamBuddy.App/Views/TeamSelectionUserInfo.xaml
+++ b/TeamBuddy.App/Views/TeamSelectionUserInfo.xaml
@@ -37,12 +37,12 @@
             <TextBlock Grid.Row="3" Text="{Binding User.Name}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
             <TextBlock Grid.Row="4" Text="Email:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6" ></TextBlock>
             <TextBlock Grid.Row="5" Text="{Binding User.Email}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
+            <TextBlock Grid.Row="6" Text="Gender:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6"  ></TextBlock>
+            <TextBlock Grid.Row="7" Text="{Binding User.Gender}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
+            <TextBlock Grid.Row="8" Text="Status:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6" ></TextBlock>
+            <ComboBox Grid.Row="9" ItemsSource="{Binding Source={StaticResource enmStatus}}"  VerticalAlignment="Center"  SelectedIndex="0" Opacity="0.4"
+                          Width="180" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Ink Free" FontWeight="Bold" ScrollViewer.HorizontalScrollBarVisibility="Auto" UseLayoutRounding="False" IsSynchronizedWithCurrentItem="True" Cursor="Hand" Background="{x:Null}"/>
 
-            <TextBlock Grid.Row="6" Text="Status:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6" ></TextBlock>
-            <ComboBox Grid.Row="7" ItemsSource="{Binding Source={StaticResource enmStatus}}"  VerticalAlignment="Center"  SelectedIndex="0" Opacity="0.6"
-                  Width="120" HorizontalContentAlignment="Center"/>
-            <TextBlock Grid.Row="8" Text="Gender:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6"  ></TextBlock>
-            <TextBlock Grid.Row="9" Text="{Binding User.Gender}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
 
         </Grid>
 
