Added Hand Cursor to Buttons, the ComboBox and the List and changed the FontSize in TeamSelectionTeamList

--- a/TeamBuddy.App/Views/CreateUserUC.xaml
+++ b/TeamBuddy.App/Views/CreateUserUC.xaml
@@ -25,32 +25,23 @@
             <ColumnDefinition Width="1.5*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Orientation="Horizontal" HorizontalAlignment="Center">
-            <TextBlock Text="Team Buddy" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Humaira Demo" FontSize="110" Foreground="#FF707070"/>
-        </StackPanel>
-
-        <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            
-            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch2" Content="Sign up" Opacity="0.6" Background="#FFDDDDDD"/>
-        </StackPanel>
-
-        <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Login:" Margin="0,0,20,0" 
+        <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Login:" Margin="0,0,20,0" 
                    FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
 
-        <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Full Name:" Margin="0,0,20,0" 
+        <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Full Name:" Margin="0,0,20,0" 
                    FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
 
-        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="E-mail:" Margin="0,0,20,0" 
+        <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="E-mail:" Margin="0,0,20,0" 
                    FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
 
-        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Password:" Margin="0,0,20,0" 
+        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Password:" Margin="0,0,20,0" 
                    FontSize="20" Foreground="#FFD4D4D4" FontFamily="Ink Free" FontWeight="Bold"/>
 
-        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Gender:" Margin="0,0,20,0" 
+        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Gender:" Margin="0,0,20,0" 
                    FontSize="20" Foreground="#FFD4D4D4" FontFamily="Ink Free" FontWeight="Bold"/>
 
 
-        <TextBox Name="TextBoxLogin" Grid.Row="2" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
+        <TextBox Name="TextBoxLogin" Grid.Row="1" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -59,7 +50,7 @@
             </TextBox.Resources>
         </TextBox>
 
-        <TextBox Name="TextBoxFullName" Grid.Row="3" Grid.Column="2" Text="Name Surname" Height="30" Margin="0,0,0,0"
+        <TextBox Name="TextBoxFullName" Grid.Row="2" Grid.Column="2" Text="Name Surname" Height="30" Margin="0,0,0,0"
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -68,7 +59,7 @@
             </TextBox.Resources>
         </TextBox>
 
-        <TextBox Name="TextBoxEmail" Grid.Row="4" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
+        <TextBox Name="TextBoxEmail" Grid.Row="3" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -77,7 +68,7 @@
             </TextBox.Resources>
         </TextBox>
 
-        <TextBox Name="TextBoxPassword" Grid.Row="5" Grid.Column="2" Text="●●●●●●●●●●●●" Height="30" Margin="0,0,0,0" 
+        <TextBox Name="TextBoxPassword" Grid.Row="4" Grid.Column="2" Text="●●●●●●●●●●●●" Height="30" Margin="0,0,0,0" 
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  TextDecorations="{x:Null}" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -86,7 +77,7 @@
             </TextBox.Resources>
         </TextBox>
 
-        <ComboBox Name="ComboBoxGender" VerticalAlignment="Center" Grid.Row="6" Grid.Column="2" SelectedIndex="0" Opacity="0.6"
+        <ComboBox Name="ComboBoxGender" VerticalAlignment="Center" Grid.Row="5" Grid.Column="2" SelectedIndex="0" Opacity="0.6"
                   Width="120" HorizontalContentAlignment="Center">
             <ComboBoxItem Content="Male"/>
             <ComboBoxItem Content="Female"/>
@@ -94,14 +85,9 @@
 
         </ComboBox>
 
-        <StackPanel Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Background="Transparent" BorderBrush="Transparent" >
-                <Image Source="Images/TeamBuddy_logo.png"/>
-            </Button>
+        <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="200" Height="30" Margin="0,0,0,0" Name="ButtonSwitch2" Content="Create New User" Opacity="0.6" Background="#FFDDDDDD"/>
         </StackPanel>
 
-        <Grid.Background>
-            <ImageBrush ImageSource="Images/TeamBuddyBG.png" Stretch="UniformToFill"/>
-        </Grid.Background>
     </Grid>
 </UserControl>
