--- a/TeamBuddy.App/App.xaml
+++ b/TeamBuddy.App/App.xaml
@@ -1,8 +1,19 @@
 ﻿<Application x:Class="TeamBuddy.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/LogInView.xaml">
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
+             xmlns:enumerations="clr-namespace:TeamBuddy.DAL.Enumerations;assembly=TeamBuddy.DAL"
+             xmlns:converters="clr-namespace:TeamBuddy.App.converters"
+
+
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
 
+
+        <ObjectDataProvider x:Key="enmStatus" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="enumerations:Status"></x:Type>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
     </Application.Resources>
 </Application>
