--- a/TeamBuddy.App/Views/HomePageUC.xaml
+++ b/TeamBuddy.App/Views/HomePageUC.xaml
@@ -2,9 +2,12 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:app="clr-namespace:TeamBuddy.App"
+    DataContext="MainViewModel"
 	xmlns:views="clr-namespace:TeamBuddy.App.Views">
 
-
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -20,16 +23,21 @@
 
         <Button x:Name="CreateTeamButton" Content="Create Team" HorizontalAlignment="Left" Grid.Row="3" Grid.Column="0" VerticalAlignment="Top" Width="200" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="50" />
         <Button x:Name="CreateNewUser" Content="Create New User" HorizontalAlignment="Left" Grid.Row="2" Grid.Column="0" VerticalAlignment="Top" Width="200" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="50" />
-        <views:UserInfoUC Grid.Column="0" Grid.Row="1" Grid.RowSpan="2"/>
-        <Button x:Name="HomeButton" Grid.Row="0" Grid.Column="0" Content="Team Buddy" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="50" />
+        <views:UserInfoUC Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" />
+        <Button 
+            Visibility="{Binding Path=ButtonVisibility, Converter={StaticResource BooleanToVisibilityConverter} }"
+            x:Name="HomeButton" Grid.Row="0" Grid.Column="0" Content="Team Buddy" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="50" />
         <Label x:Name="MyTeams" Margin="20 0" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" Content="My teams" VerticalAlignment="Center" Height="50" Width="594" FontSize="24"/>
 
         <StackPanel Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Margin="20">
-            <Grid>
+            <Grid Background="Azure">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
+                <views:ContentUC Grid.Column="0" Grid.Row="1"  />
+                <views:Content2UC Grid.Column="0" Grid.Row="1"  />
+
                 <Button Grid.Row="0" x:Name="TeamBuddyTeamButton" Content="TeamBuddyTeam" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
 
             </Grid>
