--- a/TeamBuddy.App/Views/MainWindow.xaml
+++ b/TeamBuddy.App/Views/MainWindow.xaml
@@ -5,9 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TeamBuddy.App"
         xmlns:views="clr-namespace:TeamBuddy.App.Views"
+        xmlns:viewModel="clr-namespace:TeamBuddy.App.ViewModel"
+
         mc:Ignorable="d"
         Title="TeamBuddyWindow" Height="600" Width="800" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen" Icon="../TeamBuddyIcon.ico">
+    <Window.DataContext>
+        <viewModel:MainViewModel />
+    </Window.DataContext>
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </Window.Resources>
+
     <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
@@ -15,7 +26,9 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <views:HomePageUC Grid.Row="0" Grid.Column="0"/>
+        <views:HomePageUC Grid.Row="0" Grid.Column="0" x:Name="HomePageUc" Loaded="HomePageUc_OnLoaded"/>
+        <Button Visibility="{Binding Path=ButtonVisibility, Converter={StaticResource BooleanToVisibilityConverter} }"
+                x:Name="Button" Content="Button" HorizontalAlignment="Left" Margin="129,208,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
 
