--- a/TeamBuddy.App/App.xaml
+++ b/TeamBuddy.App/App.xaml
@@ -2,27 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TeamBuddy.App"
-             xmlns:system="clr-namespace:System;assembly=mscorlib"
-             xmlns:enumerations="clr-namespace:TeamBuddy.DAL.Enumerations;assembly=TeamBuddy.DAL"
+             xmlns:viewModels="clr-namespace:TeamBuddy.App.ViewModels"
              xmlns:converters="clr-namespace:TeamBuddy.App.Converters"
-             StartupUri="Views/LogInWindow.xaml">
-
-
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-
-        <!--ResourceDictionary.MergedDictionaries>
-            <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
-        </-->
-
-
-
-        <local:MainViewModel x:Key="MainViewModel" />
-
-        <ObjectDataProvider x:Key="enmStatus" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
-            <ObjectDataProvider.MethodParameters>
-                <x:Type TypeName="enumerations:Status"/>
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>
-        <!--local:TeamSelectionWindowVM x:Key="TeamSelectionWindowVM" /-->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+                    <viewModels:ViewModelLocator x:Key="ViewModelLocator" />
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
