--- a/TeamBuddy.App/Views/HomeCreateUserView.xaml
+++ b/TeamBuddy.App/Views/HomeCreateUserView.xaml
@@ -1,12 +1,15 @@
-﻿<UserControl x:Class="TeamBuddy.App.Views.CreateUserUC"
+﻿<UserControl x:Class="TeamBuddy.App.Views.HomeCreateUserView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TeamBuddy.App.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="800">
-    <Grid>
+             xmlns:viewModels="clr-namespace:TeamBuddy.App.ViewModels"
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance viewModels:HomeCreateUserViewModel}"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=HomeCreateUserViewModel}"
+             d:DesignHeight="450" d:DesignWidth="800">
+    <Grid Visibility="{Binding NewUser, Converter={StaticResource NullToVisibilityConverter}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="65"/>
@@ -27,21 +30,16 @@
 
         <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Login:" Margin="0,0,20,0" 
                    FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
-
         <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Full Name:" Margin="0,0,20,0" 
                    FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
-
         <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="E-mail:" Margin="0,0,20,0" 
                    FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
-
         <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Password:" Margin="0,0,20,0" 
                    FontSize="20" Foreground="#FFD4D4D4" FontFamily="Ink Free" FontWeight="Bold"/>
-
         <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Gender:" Margin="0,0,20,0" 
                    FontSize="20" Foreground="#FFD4D4D4" FontFamily="Ink Free" FontWeight="Bold"/>
 
-
-        <TextBox Name="TextBoxLogin" Grid.Row="1" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
+        <TextBox Name="TextBoxLogin" Grid.Row="1" Grid.Column="2" Text="{Binding NewUser.Username}" Height="30" Margin="0,0,0,0" 
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -49,8 +47,7 @@
                 </Style>
             </TextBox.Resources>
         </TextBox>
-
-        <TextBox Name="TextBoxFullName" Grid.Row="2" Grid.Column="2" Text="Name Surname" Height="30" Margin="0,0,0,0"
+        <TextBox Name="TextBoxFullName" Grid.Row="2" Grid.Column="2" Text="{Binding NewUser.Name}" Height="30" Margin="0,0,0,0"
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -58,8 +55,7 @@
                 </Style>
             </TextBox.Resources>
         </TextBox>
-
-        <TextBox Name="TextBoxEmail" Grid.Row="3" Grid.Column="2" Text="xlogin00@stud.fit.vutbr.cz" Height="30" Margin="0,0,0,0" 
+        <TextBox Name="TextBoxEmail" Grid.Row="3" Grid.Column="2" Text="{Binding NewUser.Email}" Height="30" Margin="0,0,0,0" 
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -67,8 +63,7 @@
                 </Style>
             </TextBox.Resources>
         </TextBox>
-
-        <TextBox Name="TextBoxPassword" Grid.Row="4" Grid.Column="2" Text="●●●●●●●●●●●●" Height="30" Margin="0,0,0,0" 
+        <TextBox Name="TextBoxPassword" Grid.Row="4" Grid.Column="2" Text="{Binding NewUser.Password}" Height="30" Margin="0,0,0,0" 
                  VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  TextDecorations="{x:Null}" Opacity="0.6">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
@@ -82,12 +77,15 @@
             <ComboBoxItem Content="Male"/>
             <ComboBoxItem Content="Female"/>
             <ComboBoxItem Content="Other"/>
-
         </ComboBox>
 
-        <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Width="200" Height="30" Margin="0,0,0,0" Name="ButtonSwitch2" Content="Create New User" Opacity="0.6" Background="#FFDDDDDD"/>
+        <StackPanel Grid.Column="1" Grid.ColumnSpan="1" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch2" Content="Create New User" Opacity="0.6" Background="#FFDDDDDD" 
+                    Command="{Binding CreateNewUserCommand}"/>
         </StackPanel>
-
+        <StackPanel Grid.Column="2" Grid.ColumnSpan="1" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch3" Content="Cancel" Opacity="0.6" Background="#FFDDDDDD" 
+                    Command="{Binding CreateNewUserCanceledCommand}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
