--- a/TeamBuddy.App/Views/HomeUserDetailView.xaml
+++ b/TeamBuddy.App/Views/HomeUserDetailView.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl x:Class="TeamBuddy.App.Views.TeamSelectionUserInfo"
+﻿<UserControl x:Class="TeamBuddy.App.Views.HomeUserDetailView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TeamBuddy.App.Views"
-             xmlns:app="clr-namespace:TeamBuddy.App"
-             mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance app:MainViewModel}"
-             d:DesignHeight="800" d:DesignWidth="400">
-
+             xmlns:viewModels="clr-namespace:TeamBuddy.App.ViewModels"
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance viewModels:HomeUserDetailViewModel}"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=HomeUserDetailViewModel}"
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -39,16 +39,14 @@
             <TextBlock Grid.Row="5" Text="{Binding User.Email}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
             <TextBlock Grid.Row="6" Text="Gender:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6"  ></TextBlock>
             <TextBlock Grid.Row="7" Text="{Binding User.Gender}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Ink Free" ></TextBlock>
-            <TextBlock Grid.Row="8" Text="Status:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6" ></TextBlock>
-            <ComboBox Grid.Row="9" ItemsSource="{Binding Source={StaticResource enmStatus}}"  VerticalAlignment="Center"  SelectedIndex="0" Opacity="0.4"
-                          Width="180" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Ink Free" FontWeight="Bold" ScrollViewer.HorizontalScrollBarVisibility="Auto" UseLayoutRounding="False" IsSynchronizedWithCurrentItem="True" Cursor="Hand" Background="{x:Null}"/>
-
-
+            <!--<TextBlock Grid.Row="8" Text="Status:" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="15" FontFamily="Ink Free" Opacity="0.6" ></TextBlock>-->
         </Grid>
 
-        <Button Grid.Row="2" Margin="20,20,20,20" Content="Create Team" FontSize="20" Opacity="0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFDDDDDD" Width="300" Height="58" Cursor="Hand" >
-        </Button>
-        <Button Grid.Row="3" Margin="20,20,20,20" Content="Create User" FontSize="20" Opacity="0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFDDDDDD" Width="300" Height="58" Cursor="Hand" >
-        </Button>
+        <Button Grid.Row="2" Margin="20,20,20,20" Content="Create Team" FontSize="20" Opacity="0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFDDDDDD" Width="300" Height="58" Cursor="Hand"
+                Command="{Binding CreateNewTeamSelectedCommand}" >
+            </Button>
+        <Button Grid.Row="3" Margin="20,20,20,20" Content="Create User" FontSize="20" Opacity="0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#FFDDDDDD" Width="300" Height="58" Cursor="Hand" 
+                Command="{Binding CreateNewUserSelectedCommand}" >
+            </Button>
     </Grid>
 </UserControl>
