--- a/TeamBuddy.App/Views/HomeCreateTeamView.xaml
+++ b/TeamBuddy.App/Views/HomeCreateTeamView.xaml
@@ -8,15 +8,52 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance viewModels:HomeCreateTeamViewModel}"
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=HomeCreateTeamViewModel}"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Visibility="{Binding NewTeam, Converter={StaticResource NullToVisibilityConverter}}">
+             d:DesignHeight="200" d:DesignWidth="800">
+    <Grid Width="450" Margin="0 0 30 0" Visibility="{Binding NewTeam, Converter={StaticResource NullToVisibilityConverter}}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+
             <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Width="120" Height="30" Margin="0,0,0,0" Name="ButtonSwitch3" Content="Cancel" Opacity="0.6" Background="#FFDDDDDD" 
-                    Command="{Binding CreateNewTeamCanceledCommand}"/>
+        <Grid.ColumnDefinitions>
+            
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Team Name:" Margin="0,0,20,0" 
+                   FontSize="20" FontFamily="Ink Free" FontWeight="Bold" Foreground="#FFD4D4D4"/>
+        <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Team Description:" Margin="0,0,20,0" 
+                   FontSize="20" Foreground="#FFD4D4D4" FontFamily="Ink Free" FontWeight="Bold"/>
+
+        <TextBox Grid.Row="0" Grid.Column="1" Height="30" Margin="0,0,0,0" 
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
+            <TextBox.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </TextBox.Resources>
+        </TextBox>
+        <TextBox Grid.Row="1" Grid.Column="1"  Height="30" Margin="0,0,0,0" 
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  TextDecorations="{x:Null}" Opacity="0.6">
+            <TextBox.Resources>
+                <Style TargetType="{x:Type Border}">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </TextBox.Resources>
+        </TextBox>
+
+        <StackPanel Grid.Column="0"  Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="150" Height="40" Margin="0,0,0,0" Name="ButtonSwitch2" FontSize="15" VerticalAlignment="Center" Content="Create New Team" Opacity="0.6" Background="#FFDDDDDD" 
+                    Command="{Binding CreateNewTeamCommand}" Cursor="Hand"/>
+        </StackPanel>
+        <StackPanel Grid.Column="1"  Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="150" Height="40" Margin="0,0,0,0" Name="ButtonSwitch3" FontSize="15" VerticalAlignment="Center" Content="Cancel" Opacity="0.6" Background="#FFDDDDDD" 
+                    Command="{Binding CreateNewTeamCanceledCommand}" Cursor="Hand"/>
         </StackPanel>
     </Grid>
 </UserControl>
