--- a/TeamBuddy.App/Views/MainWindow.xaml
+++ b/TeamBuddy.App/Views/MainWindow.xaml
@@ -8,7 +8,8 @@
         mc:Ignorable="d"
         Title="My Profile" Height="720" Width="1024" WindowStartupLocation="CenterScreen" MinWidth="1000" MinHeight="600">
     <Grid>
-        <!--<views:HomeUserDetailView Grid.Column="0" /> -->
+        <!--<views:HomeUserDetailView Grid.Column="0" />--> 
         <views:HomeView />
+        <!--<views:TeamSelectedView />-->
     </Grid>
 </Window>
