--- a/TeamBuddy.App/Views/HomeView.xaml
+++ b/TeamBuddy.App/Views/HomeView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TeamBuddy.App.Views"
+             xmlns:viewModels="clr-namespace:TeamBuddy.App.ViewModels"
              mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance viewModels:HomeViewModel}"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=HomeViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Visibility="{Binding ShowHomeView, Converter={StaticResource NullToVisibilityConverter}}">
         <Grid.Background>
             <ImageBrush ImageSource="Images/TB_wall1.jpg" Stretch="UniformToFill"/>
         </Grid.Background>
