--- a/TeamBuddy.App/Views/HomeCreateUserView.xaml
+++ b/TeamBuddy.App/Views/HomeCreateUserView.xaml
@@ -38,45 +38,19 @@
                    FontSize="20" Foreground="#FF444343" FontFamily="Ink Free" FontWeight="Bold"/>
 
         <TextBox Name="TextBoxLogin" Grid.Row="1" Grid.Column="1" Text="{Binding NewUser.Username}" Height="30" Margin="0,0,0,0" 
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
-            <TextBox.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </TextBox.Resources>
-        </TextBox>
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6"/>
         <TextBox Name="TextBoxFullName" Grid.Row="2" Grid.Column="1" Text="{Binding NewUser.Name}" Height="30" Margin="0,0,0,0"
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
-            <TextBox.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </TextBox.Resources>
-        </TextBox>
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6"/>
         <TextBox Name="TextBoxEmail" Grid.Row="3" Grid.Column="1" Text="{Binding NewUser.Email}" Height="30" Margin="0,0,0,0" 
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6">
-            <TextBox.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </TextBox.Resources>
-        </TextBox>
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  FontStyle="Italic" Opacity="0.6"/>
         <TextBox Name="TextBoxPassword" Grid.Row="4" Grid.Column="1" Text="{Binding NewUser.Password}" Height="30" Margin="0,0,0,0" 
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  TextDecorations="{x:Null}" Opacity="0.6">
-            <TextBox.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </TextBox.Resources>
-        </TextBox>
-
+                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  TextDecorations="{x:Null}" Opacity="0.6"/>
         <ComboBox Name="ComboBoxGender" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1" SelectedIndex="0" Opacity="0.6"
                   Width="120" HorizontalContentAlignment="Center">
             <ComboBoxItem Content="Male"/>
             <ComboBoxItem Content="Female"/>
             <ComboBoxItem Content="Other"/>
         </ComboBox>
-
         <StackPanel Grid.Column="0" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="150" Height="40" Margin="20,0,0,0" Name="ButtonSwitch2" Content="Create New User" FontSize="15" Opacity="0.6" Background="#FFDDDDDD" 
                     Command="{Binding CreateNewUserCommand}" Cursor="Hand"/>
