--- a/TeamBuddy.App/Views/HomeView.xaml
+++ b/TeamBuddy.App/Views/HomeView.xaml
@@ -9,7 +9,7 @@
              d:DataContext="{d:DesignInstance viewModels:HomeViewModel}"
              DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=HomeViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Visibility="{Binding ShowHomeView, Converter={StaticResource NullToVisibilityConverter}}">
+    <Grid Visibility="{Binding ShowHome, Converter={StaticResource NullToVisibilityConverter}}">
         <Grid.Background>
             <ImageBrush ImageSource="Images/TB_wall1.jpg" Stretch="UniformToFill"/>
         </Grid.Background>
